--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "pixi.js": "^7.4.2",
+    "pixi.js": "latest",
     "path": "^0.12.7",
     "vite": "^7.2.4",
     "@vitejs/plugin-react": "^5.1.1"
