--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "react": "^19.2.1",
-    "pixi.js": "^8.14.3",
     "vite": "^7.2.6",
+    "@vitejs/plugin-react": "^5.1.1",
     "react-dom": "^19.2.1",
-    "path": "^0.12.7",
-    "@vitejs/plugin-react": "^5.1.1"
+    "pixi.js": "^8.14.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
